[package]
name = "gaia-maker"
version = "0.1.0"
edition = "2021"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

[dependencies]
anyhow = "1"
arrayvec = "0.7"
base64 = "0.21"
bevy = { version = "0.10", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_winit", "png", "x11"] }
bevy_asset_loader = "0.16"
bevy_common_assets = { version = "0.6", features = ["ron"] }
bevy_egui = "0.20"
bevy_kira_audio = "0.15"
bincode = "1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
dirs = "5"
flate2 = "1"
fnv = "1"
log = "0.4"
noise = "0.8"
once_cell = "1"
rand = "0.8"
regex = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
strum = { version = "0.25", features = ["derive"] }

tile-geom = { git = "https://github.com/garkimasera/tile-geom.git" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }

[profile.dev]
opt-level = 1
